Working version of monorepo

--- a/packages/admin-console/env/local.env
+++ b/packages/admin-console/env/local.env
@@ -1,6 +1,6 @@
-DB_NAME=xosports
-DB_USERNAME=xosportsdev
-DB_PASSWORD=xosportspassword
+DB_NAME=lariomono
+DB_USERNAME=lariodev
+DB_PASSWORD=lariopassword
 DB_HOST=localhost
 DB_PORT=3306
 SESSION_SECRET=dpodmnaieSjO8Y7DzUtm2LFphWHhYAIkjcv960G3
