--- a/packages/web/env/prod.build.env
+++ b/packages/web/env/prod.build.env
@@ -1,3 +1,4 @@
 SITE_BASE_URL=https://app.xosports.co.za
 GATSBY_API_BASE_URL=https://app.xosports.co.za/api
 GATSBY_REDUX_DEV=false
+GATSBY_APP_NAME=lario starter
