--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,14 @@
-# compiled output
-/dist
-/node_modules
-
-# Logs
-logs
-*.log
-npm-debug.log*
-pnpm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-
-tsconfig.build.tsbuildinfo
-
-# OS
 .DS_Store
+node_modules
+dist
 
-# Tests
-/coverage
-/.nyc_output
+/.yarn/*
+!/.yarn/patches
+!/.yarn/plugins
+!/.yarn/releases
+!/.yarn/sdks
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# Swap the comments on the following lines if you don't wish to use zero-installs
+# Documentation here: https://yarnpkg.com/features/zero-installs
+#$!/.yarn/cache
+/.pnp.*
