--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "lario",
     "packageManager": "yarn@3.1.1",
+    "private": true,
     "workspaces": [
         "./packages/*"
     ],
