--- a/packages/api-server/env/local.env
+++ b/packages/api-server/env/local.env
@@ -1,6 +1,6 @@
-DB_NAME=xosports
-DB_USERNAME=xosportsdev
-DB_PASSWORD=xosportspassword
+DB_NAME=lariomono
+DB_USERNAME=lariodev
+DB_PASSWORD=lariopassword
 DB_HOST=localhost
 DB_PORT=3306
 JWT_SECRET=supersecretvalue123
