--- a/packages/api-server/package.json
+++ b/packages/api-server/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@lario/api-server",
     "version": "0.0.1",
-    "description": "API Server for the XO Sports application, implemented using Fastify.",
+    "description": "API Server for the @lario  application, implemented using Fastify.",
     "author": "Lario Borges",
     "private": true,
     "license": "UNLICENSED",
