--- a/packages/db-migration/env/local.env
+++ b/packages/db-migration/env/local.env
@@ -1,5 +1,5 @@
-DB_NAME=xosports
-DB_USERNAME=xosportsdev
-DB_PASSWORD=xosportspassword
+DB_NAME=lariomono
+DB_USERNAME=lariodev
+DB_PASSWORD=lariopassword
 DB_HOST=localhost
 DB_PORT=3306
