--- a/packages/db-models/package.json
+++ b/packages/db-models/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@lario/db-models",
     "version": "0.0.1",
-    "description": "API Server for the XO Sports application, implemented using Fastify.",
+    "description": "ORM models using sequelize for the @lario servers.",
     "author": "Lario Borges",
     "private": true,
     "license": "UNLICENSED",
