--- a/packages/web/env/local.develop.env
+++ b/packages/web/env/local.develop.env
@@ -1,3 +1,4 @@
 SITE_BASE_URL=http://localhost:8000
-GATSBY_API_BASE_URL=http://localhost:8080
+GATSBY_API_BASE_URL=http://localhost:8080/api
 GATSBY_REDUX_DEV=true
+GATSBY_APP_NAME=lario starter
