--- a/packages/web/env/staging.build.env
+++ b/packages/web/env/staging.build.env
@@ -1,3 +1,4 @@
-SITE_BASE_URL=https://d1xxnisciw1mky.cloudfront.net
-GATSBY_API_BASE_URL=http://localhost:8080
+SITE_BASE_URL=https://staging.lario.com
+GATSBY_API_BASE_URL=http://localhost:8080/api
 GATSBY_REDUX_DEV=true
+GATSBY_APP_NAME=lario starter
