--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,7 +2,7 @@
     "name": "@lario/web",
     "version": "1.0.0",
     "private": true,
-    "description": "XO Sports Web App written using the GatsbyJS framework.",
+    "description": "@lario Web App written using the GatsbyJS framework.",
     "author": "Lario Borges",
     "keywords": [
         "gatsby"
@@ -30,7 +30,6 @@
         "build-staging": "gatsby clean && cross-env STAGING=true gatsby build",
         "build-preprod": "gatsby clean && cross-env PREPROD=true gatsby build",
         "build-prod": "gatsby clean && cross-env PROD=true gatsby build",
-        "deploy-staging": "npm run -n \"-r dotenv/config\" && npm run build-staging && cross-env STAGING=true gatsby-plugin-s3 deploy",
         "serve": "gatsby serve",
         "clean": "gatsby clean",
         "lint": "yarn run lint-js && yarn run lint-styles",
@@ -40,9 +39,9 @@
     "dependencies": {
         "@emotion/react": "^11.7.1",
         "@fontsource/poppins": "^4.5.0",
+        "@lario/redux": "workspace:^",
         "@mui/icons-material": "^5.2.5",
         "@mui/material": "^5.2.7",
-        "@lario/redux": "workspace:^",
         "gatsby": "^4.2.0",
         "gatsby-plugin-canonical-urls": "^4.4.0",
         "gatsby-plugin-manifest": "^4.3.0",
@@ -50,7 +49,6 @@
         "gatsby-plugin-offline": "^5.3.0",
         "gatsby-plugin-react-helmet": "^5.2.0",
         "gatsby-plugin-robots-txt": "^1.6.14",
-        "gatsby-plugin-s3": "^0.3.8",
         "gatsby-plugin-sass": "^5.2.0",
         "gatsby-plugin-sitemap": "^5.2.0",
         "gatsby-theme-material-ui": "^5.1.0",
